Closed Bug 1500616 Opened 7 years ago Closed 7 years ago

The ARM64 Ion jit-tests exception should work on non-simulator builds

Categories

(Core :: JavaScript Engine: JIT, defect)

ARM64
Unspecified
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- fixed

People

(Reporter: sstangl, Assigned: sstangl)

References

Details

Attachments

(1 file, 1 obsolete file)

The vast majority of ARM64 Baseline crashes on real ARM64 hardware are not actually due to Baseline issues, but due to jit-tests hardcoding assertions for the availability of Ion. ARM64 builds are not covered by JS_SIMULATOR_ARM64, but by JS_CODEGEN_ARM64. This patch fixes the majority of hardware Baseline failures.
Attachment #9018738 - Flags: review?(tcampbell)
Re-upload -- an unrelated diff I thought I `git stash`ed snuck in.
Attachment #9018738 - Attachment is obsolete: true
Attachment #9018738 - Flags: review?(tcampbell)
Attachment #9018739 - Flags: review?(tcampbell)
Attachment #9018739 - Flags: review?(tcampbell) → review+
That's a nice find.
Keywords: checkin-needed
Pushed by ncsoregi@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/53958ec4b3c9 The ARM64 Ion exception should work on non-simulator builds. r=tcampbell
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: