Bug 1500616 - The ARM64 Ion exception should work on non-simulator builds. r=tcampbell